--- a/Villamfutas/main.html
+++ b/Villamfutas/main.html
@@ -10,10 +10,12 @@
    
   </head>
   <body class="p-2 m-2 border-5 bd-example m-0 border-0"> 
+
+    
     <!--navbar-->
-    <nav class=" p-3 navbar navbar-dark bg-dark fixed-top">
+    <nav class=" p-3 navbar navbar-dark bg-dark sticky-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.php">Villám futók</a>
+        <a class="navbar-brand" href="main.html">Villám futók</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -25,22 +27,24 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="main.html">Főoldal</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#">Útvonal</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
+                  Villáminfo
                 </a>
                 <ul class="dropdown-menu dropdown-menu-dark">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" href="info.html#vorosliderc">Vörös Lidérc 82</a></li>
+                  <li><a class="dropdown-item" href="info.html#gombvillam">Gömbvillám 31</a></li>
+                  <li><a class="dropdown-item" href="info.html#szikra">Szikra 14</a></li>
+                  <li><a class="dropdown-item" href="info.html#mennydorges">Mennydörgés 631</a></li> 
                   <li>
                     <hr class="dropdown-divider">
                   </li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li><a class="dropdown-item" href="info.html">Info</a></li>
                 </ul>
               </li>
             </ul>
@@ -54,7 +58,7 @@
         </div>
       </div>
     </nav>
-     <!--login-->asd
+     <!--login-->
      <div class="modal" id="bejeletkezes">
       <div class="modal-dialog">
         <div class="modal-content">
